--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -31,7 +31,11 @@
                     </span>
                 </div>
                 <div class="challenge-actions">
-                    <a href="{{ url_for('admin.edit_challenge', challenge_id=c.id) }}" class="btn btn-edit">Edit</a>
+                    <form method="POST" action="{{ url_for('admin.delete_challenge', challenge_id=c.id) }}" 
+                          onsubmit="return confirm('Are you sure you want to delete this challenge?')" style="margin: 0;">
+                        <button type="submit" class="btn btn-delete-card">Delete</button>
+                    </form>
+                    <a href="{{ url_for('admin.edit_challenge', challenge_id=c.id) }}" class="btn btn-edit-admin">Edit</a>
                     <a href="/c/{{ c.slug }}" target="_blank" class="btn btn-preview">Preview</a>
                 </div>
             </div>
