--- a/templates/admin/challenge_form.html
+++ b/templates/admin/challenge_form.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
-<body>
+<body class="admin-page">
     <div class="top-bar">
         <h1>{{ 'Edit' if challenge else 'New' }} Challenge</h1>
         <a href="{{ url_for('admin.dashboard') }}" class="logout-btn">← Back</a>
