--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
-<body>
+<body class="admin-page">
     <div class="top-bar">
         <h1>CTF Admin</h1>
     </div>
