--- a/static/css/style.css
+++ b/static/css/style.css
@@ -474,7 +474,8 @@ body.admin-page {
 }
 
 .admin-container {
-    max-width: 1600px;
+    width: 65vw;
+    max-width: 100%;
     margin: 0 auto;
     padding: 40px 20px;
 }
